--- a/app_growth/templates/app_growth/all_growths.html
+++ b/app_growth/templates/app_growth/all_growths.html
@@ -144,7 +144,7 @@
                         {{ growths.start_index|add:forloop.counter0 }}
                     </td>
                     <td>{{ value.growth |floatformat:1}}</td>
-                    <td>{{ value.date |date:'D, d M Y,'}} {{value.date |time:"H:i"}}</td>
+                    <td>{{ value.creation_date |date:'D, d M Y,'}} {{value.creation_date |time:"H:i"}}</td>
                     <td class="uk-text-break">{{ value.comments }}</td>
                     <td>
                         <a href="{% url 'edit_growth_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
