--- a/app_growth/templates/app_growth/growth_details.html
+++ b/app_growth/templates/app_growth/growth_details.html
@@ -12,13 +12,14 @@
             <h2 class="uk-heading-divider" style="position: relative">Wzrost - Szczegóły</h2>
         </div>
 
+        <div style="height: 50px"></div>
         <div class="uk-card uk-card-default uk-border-rounded">
             <div class="uk-card-header">
                 <div>
                     <div class="uk-width-expand">
                         <h3 class="uk-card-title uk-position-relative uk-position-center">Statystyki:</h3>
-                        <div class="uk-position-relative uk-position-center"><b> Liczba
-                            Wpisów:</b> {{ statistical_data.growth__count }}</div>
+                        <div class="uk-position-relative uk-position-center">
+                            <b> Liczba Wpisów:</b> {{ statistical_data.weight__count }}</div>
                         <div class="uk-flex uk-flex-between ">
                             <div><b> MIn. Wzrost:</b> {{ statistical_data.growth__min|floatformat:2 }}</div>
                             <div><b> Śr. Wzrost: </b>{{ statistical_data.growth__avg|floatformat:2 }}</div>
@@ -29,32 +30,36 @@
             </div>
             <div class="uk-card-body">
 
-                <span> <b>Lp.: </b> </span>
-                <span> {{ number }} </span> <br>
-                <span> <b>Wzrost: </b> </span>
-                <span>{{ growth.growth }}</span><br>
-                <span> <b>Data: </b> </span>
-                <span>{{ growth.date }}</span><br>
-                <span> <b>Uwagi: </b> </span>
-                <span class="uk-text-break">{{ growth.comments }}</span>
-                <br><br>
-                <b>Nasza ocena: </b>
+            <span> <b>Lp.: </b> </span>
+            <span> {{ number }} </span> <br>
+            <span> <b>Wzrost: </b> </span>
+            <span>{{ growth.growth }}</span><br>
+            <span> <b>Data wpisu: </b> </span>
+            <span>{{ growth.creation_date }}</span><br>
+            <span> <b>Data aktualizacji: </b> </span>
+            <span>{{ growth.update_date }}</span><br>
+            <span> <b>Właściciel: </b> </span>
+            <span>{{ growth.owner }}</span><br>
+            <span> <b>Uwagi: </b> </span>
+            <span class="uk-text-break">{{ growth.comments }}</span>
+            <br><br>
+            <b>Nasza ocena: </b>
 
-                {% if growth.growth > statistical_data.growth__avg  %}
-                    <span class="uk-text-danger"> Jesteś powyżej średniej </span>
+            {% if growth.growth > statistical_data.growth__avg %}
+                <span class="uk-text-danger"> Jesteś powyżej średniej </span>
 
-                {% elif  growth.growth < statistical_data.growth__avg  %}
-                    <span class="uk-text-success">  Jesteś poniżej średniej </span>
+            {% elif  growth.growth < statistical_data.growth__avg %}
+                <span class="uk-text-success">  Jesteś poniżej średniej </span>
 
-                {% else %}
-                    <span class="uk-text-warning"> Jesteś na poziomie średniej </span>
-                {% endif %}
+            {% else %}
+                <span class="uk-text-warning"> Jesteś na poziomie średniej </span>
+            {% endif %}
 
-            </div>
-            <div class="uk-card-footer">
-                <a href="/growths" class="uk-button uk-button-text uk-position-relative uk-position-top-center">Zamknij</a>
-            </div>
         </div>
+        <div class="uk-card-footer">
+            <a href="/growths" class="uk-button uk-button-text uk-position-relative uk-position-top-center">Zamknij</a>
+        </div>
+    </div>
 
 
     </div>
