--- a/app_users/templates/users/register.html
+++ b/app_users/templates/users/register.html
@@ -80,39 +80,40 @@
             </div>
          </div>
 
-        <legend class="uk-legend" style="margin-top: 40px">Szczegóły</legend>
+{#        <legend class="uk-legend" style="margin-top: 40px">Szczegóły</legend>#}
+{##}
+{#        <div class="uk-form-label" style="margin-top: 20px">Data urodzenia</div>#}
+{#        <div class="uk-inline uk-width-1-1" >#}
+{#            <span class="uk-form-icon" uk-icon="icon: calendar"></span>#}
+{#            <input id="id_birthday" name="birthday" type="date" placeholder="Data urodzenia" autocomplete="birthday"#}
+{#                   class="uk-input uk-border-rounded" maxlength="20" required="">#}
+{#        </div>#}
+{##}
+{#        <div class="uk-form-label" style="margin-top: 20px">Płeć</div>#}
+{#        <div class=" uk-grid-small uk-child-width-auto uk-grid">#}
+{#            <label><input class="uk-radio" type="radio" name="radio2" checked> Kobieta</label>#}
+{#            <label><input class="uk-radio" type="radio" name="radio2"> Mężczyzna</label>#}
+{#        </div>#}
 
-        <div class="uk-form-label" style="margin-top: 20px">Data urodzenia</div>
-        <div class="uk-inline uk-width-1-1" >
-            <span class="uk-form-icon" uk-icon="icon: calendar"></span>
-            <input id="id_birthday" name="birthday" type="date" placeholder="Data urodzenia" autocomplete="birthday"
-                   class="uk-input uk-border-rounded" maxlength="20" required="">
-        </div>
+{#        <div style="margin-top: 30px">#}
+{#            <input id="acceptance" name="acceptance" type="checkbox" checked/>#}
+{#            <label for="acceptance" class="inline">Zgadzam się z Regulaminem</label>#}
+{#        </div>#}
 
-        <div class="uk-form-label" style="margin-top: 20px">Płeć</div>
-        <div class=" uk-grid-small uk-child-width-auto uk-grid">
-            <label><input class="uk-radio" type="radio" name="radio2" checked> Kobieta</label>
-            <label><input class="uk-radio" type="radio" name="radio2"> Mężczyzna</label>
-        </div>
-
-        <div style="margin-top: 30px">
-            <input id="remember_me" name="remember-me" type="checkbox" checked/>
-            <label for="remember_me" class="inline">Zgadzam się z Regulaminem</label>
-        </div>
-
-
-        {% if form.errors %}
+        {% if register_form.errors %}
             <div class="uk-text-center" style="margin-top: 20px">
                 <p style="font-size: 20; color: #ff1c19;">Sprawdź poprawność wprowadzonych danych!</p>
             </div>
         {% endif %}
+
+        {{ register_form.errors }}
 
         <button class="uk-button uk-button-secondary uk-width-1-1 uk-border-rounded" style="margin-top: 20px"
                 type="Submit">Zarejestruj</button>
     </form>
 
     <a href="login/">
-        <button class="uk-button uk-button-primary uk-width-1-1 uk-border-rounded" style="margin-top: 10px">Wyjdź
+        <button class="uk-button uk-button-default uk-button-primary uk-width-1-1 uk-border-rounded" style="margin-top: 10px">Wyjdź
         </button>
     </a>
 
