szablon edycji profilu

--- a/templates/fragments/menu.html
+++ b/templates/fragments/menu.html
@@ -20,7 +20,7 @@
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="{% url 'info_url' %}">Info</a></li>
-                        <li><a href="{% url 'home_url' %}">profil</a></li>
+                        <li><a href="{% url 'edit_profile_url' %}">profil</a></li>
                     </ul>
                 </div>
             </li>
