--- a/app_users/templates/users/register.html
+++ b/app_users/templates/users/register.html
@@ -97,7 +97,7 @@
 
         <div class="uk-form-label" style="margin-top: 20px">Płeć</div>
         <div class=" uk-grid-small uk-child-width-auto uk-grid">
-            <label><input class="uk-radio" type="radio" name="gender" value="woman" checked> Kobieta</label>
+            <label><input class="uk-radio" type="radio" name="gender" value="woman"> Kobieta</label>
             <label><input class="uk-radio" type="radio" name="gender" value="man"> Mężczyzna</label>
         </div>
 
