wbudowana wersja zmiany hasla

--- a/app_users/templates/edit_profile.html
+++ b/app_users/templates/edit_profile.html
@@ -98,13 +98,13 @@
                     </div>
 
 
-                    {% if register_form.errors %}
+                    {% if form.errors %}
                         <div class="uk-text-center" style="margin-top: 20px">
                             <p style="font-size: 15px; color: #ff1c19;">Sprawdź poprawność wprowadzonych danych!</p>
                         </div>
                     {% endif %}
 
-                    {{ register_form.errors }}
+                    {{ form.errors }}
 
 
                     <div class="uk-position-relative uk-position-center uk-position-top-center"
