--- a/app_users/templates/password_change.html
+++ b/app_users/templates/password_change.html
@@ -56,7 +56,7 @@
                         <div class="uk-inline uk-width-1-2">
                             <div class="uk-inline uk-width-1-1">
                                 <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                                <input id="id_password1" name="password1" type="password" placeholder="Hasło"
+                                <input id="id_new_password1" name="new_password1" type="password" placeholder="Hasło"
                                        autocomplete="current-password" class="uk-input uk-border-rounded"
                                        maxlength="15" required="">
                             </div>
@@ -64,7 +64,7 @@
                         <div class="uk-inline uk-width-1-2">
                             <div class="uk-inline uk-width-1-1">
                                 <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                                <input id="id_password2" name="password2" type="password" placeholder="Powtórz hasło"
+                                <input id="id_new_password2" name="new_password2" type="password" placeholder="Powtórz hasło"
                                        autocomplete="current-password" class="uk-input uk-border-rounded"
                                        maxlength="15" required="">
                             </div>
@@ -76,13 +76,13 @@
                         <label for="show_pass" class="inline"> Pokaż hasło</label>
                     </div>
 
-                    {% if messages%}
+                    {% if form.errors %}
                         <div class="uk-text-center" style="margin-top: 20px">
                             <p style="font-size: 15px; color: #ff1c19;">Sprawdź poprawność wprowadzonych danych!</p>
                         </div>
                     {% endif %}
 
-                    {{ messages }}
+                    {{ form.errors }}
 
                     <div class="uk-position-relative uk-position-center uk-position-top-center"
                          style="margin-top: 40px">
@@ -109,8 +109,8 @@
                     }
                 }
                 function show_fuction_new() {
-                    let password1 = document.getElementById("id_password1");
-                    let password2 = document.getElementById("id_password2");
+                    let password1 = document.getElementById("id_new_password1");
+                    let password2 = document.getElementById("id_new_password2");
 
                     if (password1.type === "password") {
                         password1.type = "text";
