--- a/app_users/templates/profile_details.html
+++ b/app_users/templates/profile_details.html
@@ -71,6 +71,14 @@
                         </div>
                     </div>
 
+                    {% if messages %}
+                        <ul>
+                            {% for message in messages %}
+                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+
                     <div class="uk-position-relative uk-position-center uk-position-top-center"
                          style="margin-top: 40px">
                         <a href="/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
