--- a/app_users/templates/users/register.html
+++ b/app_users/templates/users/register.html
@@ -118,13 +118,14 @@
 
         </div>
 
-        {% if register_form.errors %}
+        {% if register_user_form.errors or register_profile_form.errors %}
             <div class="uk-text-center" style="margin-top: 20px">
                 <p style="font-size: 15px; color: #ff1c19;">Sprawdź poprawność wprowadzonych danych!</p>
             </div>
         {% endif %}
 
-        {{ register_form.errors }}
+        {{ register_user_form.errors }}
+        {{ register_profile_form.errors }}
 
         <button class="uk-button uk-button-secondary uk-width-1-1 uk-border-rounded" style="margin-top: 20px"
                 type="Submit">Zarejestruj</button>
