--- a/app_users/templates/registration/login.html
+++ b/app_users/templates/registration/login.html
@@ -40,7 +40,7 @@
 
         <div class="uk-inline uk-width-1-1" style="margin-top: 20px">
             <span class="uk-form-icon" uk-icon="icon: lock"></span>
-            <input id="id_password" name="password" type="password" placeholder="Hasło" autocomplete="current-password"
+            <input id="id_password" name="password" type="password" placeholder="Hasło" autocomplete="password"
                    class="uk-input uk-border-rounded" maxlength="20" required="">
         </div>
 
